[metadata]
name = torchdyn
description = PyTorch package for all things neural differential equations.
long_description = file: README.md
long_description_content_type="text/markdown"
author = Sayantan Das
author_email = sayantandas30011998@gmail.com
url = https://github.com/forkbabu/torchdyn
version = 0.3.1
license = Apache License, Version 2.0

CLASSIFIERS =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.6.0
    pytorch-lightning>=0.8.4
    dgl>=0.4.1
    torchdiffeq>=0.0.1
    matplotlib
    torchvision
    scikit-learn

[options.extras_require]
all =
test =
    pytest

[options.package_data]
